--- a/src/OAuthStack.AuthServer/packages.config
+++ b/src/OAuthStack.AuthServer/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DotNetOpenAuth.Core" version="4.3.1.13153" targetFramework="net40" />
+  <package id="DotNetOpenAuth.OAuth2.AuthorizationServer" version="4.3.1.13153" targetFramework="net40" />
+  <package id="DotNetOpenAuth.OAuth2.ClientAuthorization" version="4.3.1.13153" targetFramework="net40" />
+  <package id="DotNetOpenAuth.OAuth2.Core" version="4.3.1.13153" targetFramework="net40" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
   <package id="jQuery" version="1.7.1.1" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net40" />
