Added  relaxSslRequirements="true" so that OAuth2 stuff works locally over vanilla HTTP.

--- a/src/OAuthStack.AuthServer/Web.config
+++ b/src/OAuthStack.AuthServer/Web.config
@@ -112,7 +112,7 @@
         </settings>
     </system.net>
     <dotNetOpenAuth>
-        <messaging>
+        <messaging relaxSslRequirements="true">
             <untrustedWebRequest>
                 <whitelistHosts>
                     <!-- Uncomment to enable communication with localhost (should generally not activate in production!) -->
