--- a/src/OAuthStack.DemoClient/app.config
+++ b/src/OAuthStack.DemoClient/app.config
@@ -1,29 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <sectionGroup name="dotNetOpenAuth" type="DotNetOpenAuth.Configuration.DotNetOpenAuthSection, DotNetOpenAuth.Core">
-      <section name="openid" type="DotNetOpenAuth.Configuration.OpenIdElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
-      <section name="oauth" type="DotNetOpenAuth.Configuration.OAuthElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
-      <section name="messaging" type="DotNetOpenAuth.Configuration.MessagingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
-      <section name="reporting" type="DotNetOpenAuth.Configuration.ReportingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
-    </sectionGroup>
-  </configSections>
-  <dotNetOpenAuth>
-    <!-- Allow DotNetOpenAuth to publish usage statistics to library authors to improve the library. -->
-    <reporting enabled="true" />
-
-    <!-- Relaxing SSL requirements is useful for simple samples, but NOT a good idea in production. -->
-    <messaging relaxSslRequirements="true" />
-  </dotNetOpenAuth>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
-  </startup>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.2.13.0" newVersion="2.2.13.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+    <configSections>
+        <sectionGroup name="dotNetOpenAuth" type="DotNetOpenAuth.Configuration.DotNetOpenAuthSection, DotNetOpenAuth.Core">
+            <section name="openid" type="DotNetOpenAuth.Configuration.OpenIdElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
+            <section name="oauth" type="DotNetOpenAuth.Configuration.OAuthElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
+            <section name="messaging" type="DotNetOpenAuth.Configuration.MessagingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
+            <section name="reporting" type="DotNetOpenAuth.Configuration.ReportingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
+        </sectionGroup>
+    </configSections>
+    <dotNetOpenAuth>
+        <!-- TODO: Relaxing SSL requirements is useful for simple samples, but NOT a good idea in production. -->
+        <messaging relaxSslRequirements="true" />
+    </dotNetOpenAuth>
+    <startup>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+    </startup>
+    <runtime>
+        <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+            <dependentAssembly>
+                <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-2.2.13.0" newVersion="2.2.13.0" />
+            </dependentAssembly>
+        </assemblyBinding>
+    </runtime>
 </configuration>
