--- a/src/OAuthStack.FakeServices/OAuthStack.FakeServices.csproj
+++ b/src/OAuthStack.FakeServices/OAuthStack.FakeServices.csproj
@@ -82,6 +82,7 @@
     <Compile Include="FakeCryptoKeyStore.cs" />
     <Compile Include="FakeOAuth2ClientStore.cs" />
     <Compile Include="FakeOAuth2Client.cs" />
+    <Compile Include="FakeUserStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
