--- a/src/OAuthStack.DemoClient/packages.config
+++ b/src/OAuthStack.DemoClient/packages.config
@@ -7,4 +7,6 @@
   <package id="Microsoft.Bcl" version="1.1.3" targetFramework="net40" />
   <package id="Microsoft.Bcl.Build" version="1.0.8" targetFramework="net40" />
   <package id="Microsoft.Net.Http" version="2.2.13" targetFramework="net40" />
+  <package id="ServiceStack.Common" version="3.9.58" targetFramework="net40" />
+  <package id="ServiceStack.Text" version="3.9.58" targetFramework="net40" />
 </packages>
