Split the CryptoKeyStore into two named CryptoKeyPair instances in preparation for replacing hard-coded keys with PFX certificate files.

--- a/src/OAuthStack.FakeServices/OAuthStack.FakeServices.csproj
+++ b/src/OAuthStack.FakeServices/OAuthStack.FakeServices.csproj
@@ -78,11 +78,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FakeCryptoKeyProvider.cs" />
+    <Compile Include="FakeCryptoKeyPair.cs" />
     <Compile Include="FakeCryptoKeyStore.cs" />
     <Compile Include="FakeOAuth2ClientStore.cs" />
     <Compile Include="FakeOAuth2Client.cs" />
     <Compile Include="FakeUserStore.cs" />
+    <Compile Include="HardCodedCryptoKeys.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
