--- a/src/OAuthStack.Common/OAuthStack.Common.csproj
+++ b/src/OAuthStack.Common/OAuthStack.Common.csproj
@@ -114,7 +114,7 @@
     <Compile Include="Infrastructure\RequireOAuth2ScopeAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceModel\Users.cs" />
-    <Compile Include="Services\ICryptoKeyProvider.cs" />
+    <Compile Include="Services\ICryptoKeyPair.cs" />
     <Compile Include="Services\IOAuth2ClientStore.cs" />
     <Compile Include="Services\IUserStore.cs" />
     <Compile Include="ServiceModel\User.cs" />
