Project has been rebuilt to use proper X509 certificates instead of the hard-coded example crypto parameters used in earlier revisions.

--- a/src/OAuthStack.AuthServer/OAuthStack.AuthServer.csproj
+++ b/src/OAuthStack.AuthServer/OAuthStack.AuthServer.csproj
@@ -236,6 +236,16 @@
       <Name>OAuthStack.FakeServices</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\OAuthStack.Common\Certificates\auth-server.pfx">
+      <Link>Certificates\auth-server.pfx</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\OAuthStack.Common\Certificates\data-server.pfx">
+      <Link>Certificates\data-server.pfx</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
