Moved CryptoKeyPair out of FakeServices and into Common, since it's not a fake - it's now a real crypto key provider class.

--- a/src/OAuthStack.Common/OAuthStack.Common.csproj
+++ b/src/OAuthStack.Common/OAuthStack.Common.csproj
@@ -111,6 +111,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Security\CryptoKeyPair.cs" />
     <Compile Include="Infrastructure\RequireOAuth2ScopeAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceModel\Users.cs" />
