--- a/src/OAuthStack.AuthServer/Web.config
+++ b/src/OAuthStack.AuthServer/Web.config
@@ -11,6 +11,7 @@
             <section name="messaging" type="DotNetOpenAuth.Configuration.MessagingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
             <section name="reporting" type="DotNetOpenAuth.Configuration.ReportingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
         </sectionGroup>
+        <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" requirePermission="false" />
     </configSections>
     <connectionStrings>
         <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-OAuthStack.AuthServer-20130819212036;Integrated Security=SSPI" />
@@ -123,4 +124,22 @@
         <!-- Allow DotNetOpenAuth to publish usage statistics to library authors to improve the library. -->
         <reporting enabled="true" />
     </dotNetOpenAuth>
+    <log4net>
+        <appender name="FileAppender" type="log4net.Appender.FileAppender">
+            <!--TODO: update this to the location you want to keep your own log files. -->
+            <file value="C:\logfiles\oauthstack\authserver.log" />
+            <appendToFile value="true" />
+            <layout type="log4net.Layout.PatternLayout">
+                <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+            </layout>
+        </appender>
+        <root>
+            <level value="ALL" />
+            <appender-ref ref="FileAppender" />
+        </root>
+        <!-- Specify the level for some specific categories -->
+        <logger name="DotNetOpenAuth">
+            <level value="ALL" />
+        </logger>
+    </log4net>
 </configuration>
