--- a/src/OAuthStack.DemoClient/app.config
+++ b/src/OAuthStack.DemoClient/app.config
@@ -7,20 +7,46 @@
             <section name="messaging" type="DotNetOpenAuth.Configuration.MessagingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
             <section name="reporting" type="DotNetOpenAuth.Configuration.ReportingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
         </sectionGroup>
+        <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" requirePermission="false" />
+
     </configSections>
     <dotNetOpenAuth>
         <!-- TODO: Relaxing SSL requirements is useful for simple samples, but NOT a good idea in production. -->
         <messaging relaxSslRequirements="true" />
     </dotNetOpenAuth>
-    <startup>
+    <!--<startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
     </startup>
+    -->
     <runtime>
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
             <dependentAssembly>
                 <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
                 <bindingRedirect oldVersion="0.0.0.0-2.2.13.0" newVersion="2.2.13.0" />
             </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="log4net" />
+                <bindingRedirect oldVersion="0.0.0.0-1.2.10.0" newVersion="1.2.11.0" />
+            </dependentAssembly>
         </assemblyBinding>
     </runtime>
+    <log4net>
+        <appender name="FileAppender" type="log4net.Appender.FileAppender">
+            <!--TODO: update this to the location where you want to keep your own log files. -->
+            <file value="C:\logfiles\oauthstack\democlient.log" />
+            <appendToFile value="true" />
+            <layout type="log4net.Layout.PatternLayout">
+                <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+            </layout>
+        </appender>
+        <root>
+            <level value="ALL" />
+            <appender-ref ref="FileAppender" />
+        </root>
+        <!-- Specify the level for some specific categories -->
+        <logger name="DotNetOpenAuth">
+            <level value="ALL" />
+        </logger>
+    </log4net>
+
 </configuration>
