--- a/src/OAuthStack.UserDataServer/OAuthStack.UserDataServer.csproj
+++ b/src/OAuthStack.UserDataServer/OAuthStack.UserDataServer.csproj
@@ -47,6 +47,9 @@
     <Reference Include="DotNetOpenAuth.OAuth2.ResourceServer">
       <HintPath>..\packages\DotNetOpenAuth.OAuth2.ResourceServer.4.3.1.13153\lib\net40-full\DotNetOpenAuth.OAuth2.ResourceServer.dll</HintPath>
     </Reference>
+    <Reference Include="log4net">
+      <HintPath>..\packages\log4net.2.0.0\lib\net40-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="ServiceStack">
       <HintPath>..\packages\ServiceStack.3.9.58\lib\net35\ServiceStack.dll</HintPath>
