--- a/src/OAuthStack.AuthServer/packages.config
+++ b/src/OAuthStack.AuthServer/packages.config
@@ -9,6 +9,7 @@
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.9.0.1" targetFramework="net40" />
   <package id="knockoutjs" version="2.1.0" targetFramework="net40" />
+  <package id="log4net" version="2.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Providers" version="1.2" targetFramework="net40" />
   <package id="Microsoft.AspNet.Providers.Core" version="1.1" targetFramework="net40" />
