--- a/src/OAuthStack.UserDataServer/packages.config
+++ b/src/OAuthStack.UserDataServer/packages.config
@@ -4,6 +4,7 @@
   <package id="DotNetOpenAuth.OAuth.Common" version="4.3.1.13153" targetFramework="net40" />
   <package id="DotNetOpenAuth.OAuth2.Core" version="4.3.1.13153" targetFramework="net40" />
   <package id="DotNetOpenAuth.OAuth2.ResourceServer" version="4.3.1.13153" targetFramework="net40" />
+  <package id="log4net" version="2.0.0" targetFramework="net40" />
   <package id="Microsoft.Bcl" version="1.1.3" targetFramework="net40" />
   <package id="Microsoft.Bcl.Build" version="1.0.8" targetFramework="net40" />
   <package id="Microsoft.Net.Http" version="2.2.13" targetFramework="net40" />
